Remove guava from common module